--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -45,6 +47,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   image_picker: ^1.1.2
   url_launcher: ^6.2.5
+  intl: ^0.19.0
 
 
 dev_dependencies:
