--- a/firebase.json
+++ b/firebase.json
@@ -15,8 +15,23 @@
   },
   "functions": [
     {
-      "source": "functions",
       "codebase": "default",
+      "disallowLegacyRuntimeConfig": true,
+      "ignore": [
+        "node_modules",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log",
+        "*.local"
+      ],
+      "predeploy": [
+        "npm --prefix \"$RESOURCE_DIR\" run lint"
+      ],
+      "source": "functions"
+    },
+    {
+      "source": "ai-proxy",
+      "codebase": "ai-proxy",
       "disallowLegacyRuntimeConfig": true,
       "ignore": [
         "node_modules",
@@ -31,9 +46,3 @@
     }
   ]
 }
-
-
-
-
-
-
