--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   image_picker: ^1.1.2
   url_launcher: ^6.2.5
   intl: ^0.19.0
+  google_sign_in: ^6.2.1
+  kakao_flutter_sdk_user: ^1.9.5
 
 
 dev_dependencies:
@@ -74,6 +76,8 @@ flutter:
 
   assets:
     - .env
+    - assets/
+    - assets/kakao_login_medium_wide.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
