--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,9 @@ dependencies:
   intl: ^0.19.0
   google_sign_in: ^6.2.1
   kakao_flutter_sdk_user: ^1.9.5
+  pdf: ^3.10.8
+  path_provider: ^2.1.2
+  share_plus: ^7.2.1
 
 
 dev_dependencies:
