--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -39,9 +39,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
-                <!-- TODO: 카카오 개발자 콘솔에서 발급받은 네이티브 앱 키로 변경하세요 -->
-                <!-- "kakao{NATIVE_APP_KEY}" 형식 (예: kakao1234567890abcdef) -->
-                <data android:scheme="kakao{YOUR_KAKAO_NATIVE_APP_KEY}" android:host="oauth"/>
+                <data android:scheme="kakaoa54ee31ca82b52a72dc5fa930565a2ae" android:host="oauth"/>
             </intent-filter>
         </activity>
         <!-- Don't delete the meta-data below.
